<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.ghostflying.nfmxposed.ui.HelpActivity">

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/help_priority_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginBottom="@dimen/help_primary_title_margin_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_priority_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_priority_low_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/help_secondary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_secondary_title_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@mipmap/priority_low"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_priority_min_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/help_secondary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_secondary_title_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@mipmap/priority_min"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_visibility_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/help_primary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_primary_title_margin_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_visibility_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_visibility_private_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/help_secondary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_secondary_title_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@mipmap/visibility_private"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_visibility_public_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/help_secondary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_secondary_title_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@mipmap/visibility_public"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_visibility_secret_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/help_secondary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_secondary_title_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@mipmap/visibility_secret"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_vibrate_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/help_primary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_primary_title_margin_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_vibrate_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/help_secondary_title_margin_vertical"
                android:layout_marginBottom="@dimen/help_secondary_title_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
